test/invalid/idl/duplicate.widl
typedef int Test;

[Exposed=Window]
interface Test {
  void foo();
};
